# museum-guide

./: .gitignore  CMakeLists.txt  README.md  connect.sh  export.sh  package.xml  save_map.sh
launch/: amcl.launch  bringup.launch  mapping_real.launch  mapping_sim.launch  move_base.launch  move_base_real.launch  move_base_sim.launch  museum_small.launch  navigation_real.launch  navigation_sim.launch  qr_goals.launch  qr_goals_real.launch  qr_goals_sim.launch
mapas/: fullmap1.yaml  halfmap.yaml
maps/: frames.gv  map_real1.pgm  map_real1.yaml  map_real2.pgm  map_real2.yaml  mapa_real2.pgm  mapa_real2.yaml  real_map4.pgm  real_map4.yaml  sim.pgm  sim.yaml  sim_map.pgm
models/uc_cr_qr_wall/: model.config  model.sdf
models/uc_cr_qr_wall_L1/: model.config  model.sdf
models/uc_cr_qr_wall_L2/: model.config  model.sdf
models/uc_cr_qr_wall_L3/: model.config  model.sdf
models/uc_cr_qr_wall_L4/: model.config  model.sdf
models/uc_cr_qr_wall_L5/: model.config  model.sdf
models/uc_cr_qr_wall_L6/: model.config  model.sdf
models/uc_deec_cr_qr_P1/: model.config  model.sdf
models/uc_deec_cr_qr_P2/: model.config  model.sdf
models/uc_deec_cr_qr_P3/: model.config  model.sdf
param/: mapping_sim_params.yaml
param/Real/: costmap_common_params_real.yaml  costmap_common_params_real.yaml.org  (+2 more)
rviz/: mapping_real.rviz  real.rviz  sim.rviz
rvizConfig/: navSimRVIZ.rviz
src/: explorer_node.cpp  goals_node.py  goals_node_real.py  guide_node_template.cpp  simple_goals_xpto.cpp
world/: frames.gv  rcp_world.world  rcp_world2.world  rcp_world3.world  teste1.yaml
(+17 files in other folders)
